--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/Web/favicon1000x1000.png' rel='icon' type='image/x-icon'/>
+    <link href='https://imgur.com/C3KnTo8.png' rel='icon' type='image/x-icon'/>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div class="profile">
             <div class="profile-above">
                 <div class="avatar">
-                    <img src="/Web/129720917_131371355424623_1358340129541376458_n.jpg">
+                    <img src="https://imgur.com/btCyJuK.png">
                 </div>
                 <div class="info">
                     <h2>Phạm Văn Linh <i class="fad fa-user-circle"></i></h2>
